--- a/work/src/main/res/layout/activity_main.xml
+++ b/work/src/main/res/layout/activity_main.xml
@@ -18,4 +18,7 @@
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.ar.core.codelab.cloudanchor.MainActivity" />
+    tools:context="com.google.ar.core.codelab.cloudanchor.MainActivity" >
+
+
+</RelativeLayout>
