--- a/work/src/main/res/layout/cloud_anchor_fragment.xml
+++ b/work/src/main/res/layout/cloud_anchor_fragment.xml
@@ -49,5 +49,10 @@
         android:id="@+id/cam_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:text="light"
+        android:id="@+id/light_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
   </LinearLayout>
 </FrameLayout>
